tests/machine/x/fortran/var_assignment.f90
program main
  implicit none
  x = 1
  x = 2
  print *, x
end program main
